generated/checkers/refine/KN-Integer-Overflow-c09d2eff-0/build_logs/syntax-repair-refine-0-4/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::isDirectWidenedUseTo64(const clang::Expr*, clang::ento::CheckerContext&, const clang::Stmt*&, const clang::Decl*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:142:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  142 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(PStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::getMaxForExpr(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:216:28: error: no matching function for call to ‘llvm::APSInt::getMaxValue()’
  216 |       Out = Out.getMaxValue();
      |             ~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APSInt.h:303:17: note: candidate: ‘static llvm::APSInt llvm::APSInt::getMaxValue(uint32_t, bool)’
  303 |   static APSInt getMaxValue(uint32_t numBits, bool Unsigned) {
      |                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APSInt.h:303:17: note:   candidate expects 2 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:220:28: error: no matching function for call to ‘llvm::APSInt::getMaxValue()’
  220 |       Out = Out.getMaxValue();
      |             ~~~~~~~~~~~~~~~^~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APSInt.h:303:17: note: candidate: ‘static llvm::APSInt llvm::APSInt::getMaxValue(uint32_t, bool)’
  303 |   static APSInt getMaxValue(uint32_t numBits, bool Unsigned) {
      |                 ^~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/llvm/include/llvm/ADT/APSInt.h:303:17: note:   candidate expects 2 arguments, 0 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeSizeContext(const clang::Stmt*, const clang::Decl*, const clang::BinaryOperator*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:299:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  299 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::looksLikeNonSizeEncodingContext(const clang::Stmt*, const clang::Decl*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:349:21: warning: unused variable ‘Ret’ [-Wunused-variable]
  349 |     if (const auto *Ret = dyn_cast_or_null<ReturnStmt>(UseSiteStmt)) {
      |                     ^~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
